--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
   <title>Document</title>
   <script src="src/main.ts" type="module"></script>
-  <script src="./src/dialogi.js" defer></script>
-  <script src="src/login.ts" defer></script>
-  <script src="./src/dark-mode.js" defer></script>
+  <script src="./src/dialogi.js" type="module"></script>
+  <script src="src/login.ts" type="module"></script>
+  <script src="./src/dark-mode.js" type="module"></script>
   <script src="https://kit.fontawesome.com/4b7fc9f2a3.js" crossorigin="anonymous"></script>
 </head>
 <body>
