--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="apple-touch-icon" href="/icons/icon-192x192.png" sizes="192x192">
   <meta name="theme-color" content="#ffffff">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="manifest" href="/dist/manifest.webmanifest">
 
   <link rel="stylesheet" href="./src/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
